# luan_van_tot_nghiep

./: LICENSE  Luan_van_tot_nghiep.docx  Prj2_Prepresentation.pptx  README  barcode.docx  wsl_port_forward.ps1
esp32_cam/: .gitignore
esp32_cam/esp32_project/: .gitignore  CMakeLists.txt  sdkconfig
esp32_cam/esp32_project/main/: CMakeLists.txt  connect_wifi.c  main.c  main.h
library_sys/: app.js  app_vip.js  deploy.sh  package-lock.json  package.json
library_sys/data_base/: data_base.js
library_sys/esp32_cam/: scan_barcode.py  upload.js
library_sys/public/css/: account.css  book_list.css  header.css  login.css  register.css  search_bar.css  search_bar_manage.css  styles.css
library_sys/routes/: book.js  home.js  login.js  pi_query.js
library_sys/routes/controller/: controller_account.js  controller_book.js  controller_home.js  controller_login.js  controller_manage.js  render_page.js
library_sys/test_upload_file/: jpg_2_gray.py  test.js
library_sys/uploads/: scan_barcode.py
library_sys/views/: account.ejs  book.ejs  home.ejs  login.ejs  manage.ejs  register.ejs
library_sys/views/particals/: account_list.ejs  book_list.ejs  header.ejs  search_bar.ejs  (+2 more)
raspberry_pi_firmware/: app.js  auto_deploy.txt  deploy.sh  init_environment  package.json
raspberry_pi_firmware/esp32_cam/: test_send.js  upload.js
raspberry_pi_firmware/pi-rfid/: lcd.py  lcd_2004.py  lcd_task.js  library_app.py  read.py  rfid_task.js  start_pi_task.sh  test_child_process.py  write.py  your_file.txt
raspberry_pi_firmware/views/: account.ejs  home.ejs  library.ejs  login.ejs
(+29 files in other folders)
